// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TapStack Unit Tests Stack Structure and Configuration TapStack should instantiate successfully with custom props 1`] = `
"{
  "output": {
    "bastion_public_ip": {
      "description": "Public IP of the Bastion Host",
      "value": "1.2.3.4"
    },
    "rds_instance_endpoint": {
      "description": "The connection endpoint for the RDS instance",
      "value": "mock-rds-endpoint.amazonaws.com"
    },
    "ssh_command": {
      "description": "Command to SSH into the Bastion Host (provide your own key)",
      "value": "ssh ec2-user@1.2.3.4"
    }
  },
  "provider": {
    "aws": [
      {
        "default_tags": [
          {
            "tags": {
              "Environment": "prod",
              "Team": "TAP"
            }
          }
        ],
        "region": "us-west-2"
      }
    ]
  },
  "terraform": {
    "backend": {
      "s3": {
        "bucket": "my-custom-state-bucket",
        "dynamodb_table": "terraform-lock-my-custom-state-bucket",
        "encrypt": true,
        "key": "prod/TestTapStackWithProps.tfstate",
        "region": "us-west-2"
      }
    },
    "required_providers": {
      "aws": {
        "source": "aws",
        "version": "6.4.0"
      }
    }
  }
}"
`;

exports[`TapStack Unit Tests Stack Structure and Configuration TapStack should use default values when no props are provided 1`] = `
"{
  "output": {
    "bastion_public_ip": {
      "description": "Public IP of the Bastion Host",
      "value": "1.2.3.4"
    },
    "rds_instance_endpoint": {
      "description": "The connection endpoint for the RDS instance",
      "value": "mock-rds-endpoint.amazonaws.com"
    },
    "ssh_command": {
      "description": "Command to SSH into the Bastion Host (provide your own key)",
      "value": "ssh ec2-user@1.2.3.4"
    }
  },
  "provider": {
    "aws": [
      {
        "default_tags": [
          {
            "tags": {
              "Environment": "dev",
              "ManagedBy": "CDKTF",
              "Project": "SecureFoundation"
            }
          }
        ],
        "region": "us-east-1"
      }
    ]
  },
  "terraform": {
    "backend": {
      "s3": {
        "bucket": "iac-rlhf-tf-states",
        "dynamodb_table": "terraform-lock-iac-rlhf-tf-states",
        "encrypt": true,
        "key": "dev/TestTapStackDefault.tfstate",
        "region": "us-east-1"
      }
    },
    "required_providers": {
      "aws": {
        "source": "aws",
        "version": "6.4.0"
      }
    }
  }
}"
`;
